force-app/main/default/objects/Custom_Merge_Settings__mdt/Custom_Merge_Settings__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metada Type is used to store some configuration for the custom merge functions.</description>
    <label>Custom Merge Setting</label>
    <pluralLabel>Custom Merge Settings</pluralLabel>
</CustomObject>