force-app/main/default/objects/Custom_Merge_Settings__mdt/fields/ChildObjectNames__c.field-meta.xml
<CustomField>
    <fullName>ChildObjectNames__c</fullName>
    <description>Enter child object names followed by comma for the merge function to move child records to master account</description>
    <label>ChildObjectNames</label>
    <length>255</length>
    <type>Text</type>
</CustomField>