force-app/main/default/objects/Custom_Merge_Settings__mdt/fields/FieldAPINames__c.field-meta.xml
<CustomField>
    <fullName>FieldAPINames__c</fullName>
    <description>The fields to display in the view duplication account list view</description>
    <label>FieldAPINames</label>
    <length>255</length>
    <type>Text</type>
</CustomField>