force-app/main/default/objects/Custom_Merge_Settings__mdt/fields/RestrictedExternalFields__c.field-meta.xml
<CustomField>
    <fullName>RestrictedExternalFields__c</fullName>
    <label>RestrictedExternalFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>